<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ManageAssignmentsTitle" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|textEmailAddress|number"
        android:text="@string/ManageAssignmentsInput1" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ManageAssignmentsTitle2" />

    <EditText
        android:id="@+id/entertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|textUri|number"
        android:text="@string/ManageAssignmentsInput2" />

    <Button
        android:id="@+id/Savedata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ManageAssignmentsButton" />

</LinearLayout>