<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/Retrieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Configure"
        android:contentDescription="@string/app_name"
        android:gravity="left"
        android:text="@string/retrieve_assignment_list_from_server" />

    <Button
        android:id="@+id/Configure"
        style="@style/AppBaseTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/Configure_preferences"
        android:gravity="fill_vertical"
        android:text="@string/Configure_preferences"
        android:typeface="normal" />
    
    <Button
        android:id="@+id/Manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Retrieve"
        android:contentDescription="@string/app_name"
        android:gravity="left"
        android:text="@string/Manage_assignments"/>

</RelativeLayout>